--- a/search/templates/index.html
+++ b/search/templates/index.html
@@ -8,32 +8,107 @@
     .query {
         width: 300px;
         height: 300px;
-        border:5px solid green;
     }
     .result {
         width: 200px;
         height: 200px;
     }
   </style>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/materialize.min.css">
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="{{ STATIC_URL }}js/materialize.min.js"></script>
 </head>
 
 <body>
   <!-- Upload form. Note enctype attribute! -->
-  <form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <p>{{ form.non_field_errors }}</p>
-    <p>Search Feature: {{ form.search_by }}</p>
-    <p>Search Limit: {{ form.search_limit }}</p>
-    <p>Distance Model: {{ form.distance_model }}</p>
-    <p>Select an Image: {{ form.docfile }}</p>
-    <p><input type="submit" value="Submit"></p>
-  </form>
-  {% if query %}
-    <img class="query" src="{{ MEDIA_URL }}{{ query }}"></img>
-  {% endif %}
-  {% for result in results %}
-    <img class="result" src="{{ MEDIA_URL }}{{ result }}"></img>
-  {% endfor %}
+  <div class="container">
+    <form action="." method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <p>{{ form.non_field_errors }}</p>
+      <h5 class="header">Search Feature:</h5>
+      <div class="row">
+        <div class="col s1">
+          <input class="with-gap" name="search_by" type="radio" id="id_search_by_0" value="sift" />
+          <label for="id_search_by_0">SIFT</label>
+        </div>
+        <div class="col s1">
+          <input class="with-gap" name="search_by" type="radio" id="id_search_by_1" value="color" />
+          <label for="id_search_by_1">Color</label>
+        </div>
+      </div>
+      <h5 class="header">Search Limit:</h5>
+      <div class="row">
+        <div class="col s1">
+          <input class="with-gap" name="search_limit" type="radio" id="id_search_limit_0" value="5" />
+          <label for="id_search_limit_0">5</label>
+        </div>
+        <div class="col s1">
+          <input class="with-gap" name="search_limit" type="radio" id="id_search_limit_1" value="10" />
+          <label for="id_search_limit_1">10</label>
+        </div>
+        <div class="col s1">
+          <input class="with-gap" name="search_limit" type="radio" id="id_search_limit_2" value="20" />
+          <label for="id_search_limit_2">20</label>
+        </div>
+        <div class="col s1">
+          <input class="with-gap" name="search_limit" type="radio" id="id_search_limit_3" value="50" />
+          <label for="id_search_limit_3">50</label>
+        </div>
+      </div>
+      <h5 class="header">Distance Model:</h5>
+      <div class="row">
+        <div class="col s2">
+          <input class="with-gap" name="distance_model" type="radio" id="id_distance_model_0" value="euclidean" />
+          <label for="id_distance_model_0">euclidean</label>
+        </div>
+        <div class="col s2">
+          <input class="with-gap" name="distance_model" type="radio" id="id_distance_model_1" value="hamming" />
+          <label for="id_distance_model_1">hamming</label>
+        </div>
+        <div class="col s2">
+          <input class="with-gap" name="distance_model" type="radio" id="id_distance_model_2" value="cosine" />
+          <label for="id_distance_model_2">cosine</label>
+        </div>
+      </div>
+      <h5 class="header">Query Image:</h5>
+      <div class="row">
+        <div class="file-field input-field">
+          <div class="waves-effect waves-light btn-large col s1">
+            <span>Image</span>
+            <input id="id_docfile" name="docfile" type="file" />
+          </div>
+          <input class="file-path validate col s4" type="text" />
+        </div>
+        <button class="btn waves-effect waves-light btn-large col s1 offset-s2 z-depth-3" type="submit" value="Submit">Submit
+          <i class="material-icons">send</i>
+        </button>
+      </div>
+    </form>
+    <div class="row">
+    {% if query %}
+      <div class="card query z-depth-1 card-panel hoverable">
+        <div class="card-image">
+          <img src="{{ MEDIA_URL }}{{ query }}">
+          <span class="card-title">Query Image</span>
+        </div>
+      </div>
+    {% endif %}
+    {% for result in results %}
+      <img class="result z-depth-1" src="{{ MEDIA_URL }}{{ result }}">
+    {% endfor %}
+    </div>
+  </div>
+  <script>
+  $(function() {
+    $('select').material_select();
+    $('.materialboxed').materialbox();
+    console.log('{{form.search_by.value}}');
+    $('input[value="{{form.search_by.value}}"]').attr('checked', 'checked');
+    $('input[value="{{form.search_limit.value}}"]').attr('checked', 'checked');
+    $('input[value="{{form.distance_model.value}}"]').attr('checked', 'checked');
+  });
+  </script>
 </body>
 
 </html>
